[gd_scene load_steps=2 format=3 uid="uid://cukhyf8oryumi"]

[ext_resource type="Script" path="res://menus/settings/settings.gd" id="1_ws88h"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ws88h")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -119.0
offset_right = 119.0
offset_bottom = 40.0
grow_horizontal = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpenSaveLocation" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -108.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Open Save location"

[node name="Center" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -90.0
offset_right = 102.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Screen" type="OptionButton" parent="Center"]
layout_mode = 2
item_count = 1
popup/item_0/text = "empty"
popup/item_0/id = 0

[node name="HSeparator3" type="HSeparator" parent="Center"]
clip_children = 1
layout_mode = 2

[node name="Resolution" type="OptionButton" parent="Center"]
layout_mode = 2
tooltip_text = "Set window resolution"
alignment = 1
item_count = 1
popup/item_0/text = "800x600"
popup/item_0/id = 2

[node name="HSeparator1" type="HSeparator" parent="Center"]
clip_children = 1
layout_mode = 2

[node name="Control" type="HSplitContainer" parent="Center"]
layout_mode = 2

[node name="Label" type="Label" parent="Center/Control"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="SpinBox" parent="Center/Control"]
layout_mode = 2
min_value = -25.0
max_value = 25.0
step = 0.5
prefix = "Add:"
select_all_on_focus = true

[node name="HSeparator2" type="HSeparator" parent="Center"]
clip_children = 1
layout_mode = 2

[node name="Back" type="Button" parent="Center"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="OpenSaveLocation" to="." method="_on_open_save_location_pressed"]
[connection signal="item_selected" from="Center/Screen" to="." method="_on_screen_item_selected"]
[connection signal="item_selected" from="Center/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="value_changed" from="Center/Control/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="Center/Back" to="." method="_on_back_pressed"]
